--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "mongoose": "^5.4.22",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-google-oauth2": "^0.2.0",
